# Omakase

./: Makefile  docker-compose.yaml
backend/: .gitignore  Dockerfile  READEME.md  alembic.ini  main.py  pyproject.toml  requirements.txt
backend/api/: env.py  main.py
backend/api/core/: database.py
backend/api/cruds/: task.py
backend/api/models/: __init__.py  task.py
backend/api/routers/: task.py
backend/api/schemas/: task.py
backend/migrations/: env.py
backend/migrations/versions/: 7de9f2b6f807_create_tables.py
backend/tests/: test_main.py
